feat() update wording, cat

--- a/main.css
+++ b/main.css
@@ -414,7 +414,7 @@ a:active {
   background-image: url('./img/support.png');
   background-position: left bottom;
   background-repeat: no-repeat;
-  background-color: #ed1543;
+  background-color: #ca003d;
   height: 500px;
   overflow: hidden;
 }
