--- a/main.css
+++ b/main.css
@@ -164,6 +164,7 @@ a:active {
 .support-wrapper h2 {
   font-size: 34px;
   letter-spacing: -0.2px;
+  line-height: 45px;
 }
 
 .support-wrapper p:not(.large-text) {
