--- a/main.css
+++ b/main.css
@@ -238,9 +238,16 @@ a:active {
 
 .highlights-wrapper,
 .discover-wrapper {
-  background: #f1f3f3;
   padding: 100px 0;
   text-align: center;
+}
+
+.highlights-wrapper {
+  background: #fefefe;
+}
+
+.discover-wrapper {
+  background: #f1f3f3;
 }
 
 .highlights-wrapper .heading h4,
@@ -565,16 +572,15 @@ a:active {
 }
 
 .companies-tiles {
-  max-width: 800px;
   margin: 70px auto;
 }
 
 .companies-tiles a {
   text-align: center;
   height: 60px;
-  width: 25%;
+  width: 20%;
   float: left;
-  margin: 35px 0;
+  margin: 30px 0;
   position: relative;
 }
 
